--- a/mercado/requirements.txt
+++ b/mercado/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.4.4
 colorama==0.4.6
 cryptography==46.0.3
 distro==1.9.0
+dj-database-url==3.0.1
 Django==5.2.7
 django-allauth==65.13.0
 djangorestframework==3.16.1
