--- a/mercado/requirements.txt
+++ b/mercado/requirements.txt
@@ -2,23 +2,31 @@ annotated-types==0.7.0
 anyio==4.11.0
 asgiref==3.10.0
 beautifulsoup4==4.14.2
+boto3==1.41.4
+botocore==1.41.4
 cachetools==6.2.1
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
+cloudinary==1.44.1
 colorama==0.4.6
 cryptography==46.0.3
 distro==1.9.0
 dj-database-url==3.0.1
 Django==5.2.7
 django-allauth==65.13.0
+django-storages==1.14.6
 djangorestframework==3.16.1
 google-ai-generativelanguage==0.6.15
 google-api-core==2.28.1
 google-api-python-client==2.187.0
 google-auth==2.43.0
 google-auth-httplib2==0.2.1
+google-cloud-core==2.5.0
+google-cloud-storage==3.6.0
+google-crc32c==1.7.1
 google-generativeai==0.8.5
+google-resumable-media==2.8.0
 googleapis-common-protos==1.72.0
 grpcio==1.76.0
 grpcio-status==1.71.2
@@ -29,6 +37,7 @@ httplib2==0.31.0
 httpx==0.28.1
 idna==3.11
 jiter==0.12.0
+jmespath==1.0.1
 mercadopago==2.3.0
 openai==2.7.2
 packaging==25.0
@@ -43,9 +52,12 @@ pydantic==2.12.4
 pydantic_core==2.41.5
 PyJWT==2.10.1
 pyparsing==3.2.5
+python-dateutil==2.9.0.post0
 reportlab==4.4.4
 requests==2.32.5
 rsa==4.9.1
+s3transfer==0.15.0
+six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
 sqlparse==0.5.3
