--- a/mercado/requirements.txt
+++ b/mercado/requirements.txt
@@ -15,6 +15,7 @@ distro==1.9.0
 dj-database-url==3.0.1
 Django==5.2.7
 django-allauth==65.13.0
+django-cloudinary-storage==0.3.0
 django-storages==1.14.6
 djangorestframework==3.16.1
 google-ai-generativelanguage==0.6.15
