--- a/mercado/requirements.txt
+++ b/mercado/requirements.txt
@@ -4,10 +4,12 @@ asgiref==3.10.0
 beautifulsoup4==4.14.2
 boto3==1.41.4
 botocore==1.41.4
+brotli==1.2.0
 cachetools==6.2.1
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 cloudinary==1.44.1
 colorama==0.4.6
 cryptography==46.0.3
@@ -54,6 +56,7 @@ pydantic_core==2.41.5
 PyJWT==2.10.1
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 reportlab==4.4.4
 requests==2.32.5
 rsa==4.9.1
@@ -68,4 +71,5 @@ typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
+uvicorn==0.38.0
 whitenoise==6.11.0
